# blender-cloud

./: .gitignore  README.md  cloud-manage.py  cloud.py  cloud_share_img.py  config_local.example.py  deploy.sh  gulp  gulpfile.js  maintenance_mode.html  manage.py  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  rsync_ui.sh  runserver.py  runserver.wsgi  setup.cfg  setup.py
bcloud/: __init__.py
bcloud/attract/: cli.py  extension.py
cloud/: __init__.py  cli.py  email.py  eve_hooks.py  forms.py  routes.py  setup.py  store.py  webhooks.py
cloud/stats/: __init__.py  routes.py
cloud/tagged/: __init__.py  routes.py
cloud/templates/: about.html
deploy/: 2docker.sh  2server.sh  README.md  build-all.sh  build-quick.sh  full-all.sh  full-pull.sh  full-quick.sh
docker/: README.md  build.sh  docker-compose.yml  mongo-backup.sh  renew-letsencrypt.sh
docker/1_base/: Dockerfile  base.docker  build.sh
docker/2_build/: build-wheels.sh  build.docker  build.sh  myconfigure
docker/2_buildpy/: Python-3.6.3.tar.xz.md5  Python-3.6.4.tar.xz.md5  Python-3.6.6.tar.xz.md5  build.sh  buildpy.docker  includepy.docker
docker/3_buildwheels/: Dockerfile  build.docker  build.sh
docker/3_run/: 000-default.conf  build.sh  docker-entrypoint.sh  manage.sh  run.docker
docker/4_run/: 000-default.conf  Dockerfile  bash_history  build.sh  celery-worker.sh  config_local.py  docker-entrypoint.sh  manage.sh  (+2 more)
jwtkeys/: README.md
tests/: abstract_cloud_test.py  test_linked_roles.py  test_routes.py  test_stats.py  test_store.py  test_webhooks.py
(+61 files in other folders)
