[tool.poetry]
name = "blender-cloud"
version = "1.0"
description = ""
authors = [
    "Francesco Siddi <francesco@blender.org>",
    "Pablo Vazquez <pablo@blender.studio>",
    "Sybren Stüvel <sybren@blender.studio>",
]
include = ["README.md", "LICENSE.txt"]

[tool.poetry.dependencies]
python = "~3.6"
pillar = {path = "../pillar"}
attract = {path = "../attract"}
flamenco = {path = "../flamenco"}
svnman = {path = "../pillar-svnman"}

[tool.poetry.dev-dependencies]
pillar-devdeps = {path = "../pillar/devdeps"}


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
